--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<h1><a href="index.html">Jacopo Armini's page</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Lorem</a></li>
+								<li><a href="#">Morel</a></li>
 								<li><a href="#">Ipsum</a></li>
 								<li><a href="#">Feugiat</a></li>
 								<li><a href="#">Tempus</a></li>
